Change log for zeit.web
=======================

2.25 (unreleased)
-----------------

- ZON-2159: Nestle ranking area closer up to cms code

- HOTFIX: Render a redirect if we have a call to a dynamic folder with an empty
  view_name


2.24 (2015-11-09)
-----------------

- ZON-2367: Embed veeseo video widget

- ZON-2061: Printbanderole

- ZON-2247: Add caption to videos in articles


2.23 (2015-11-06)
-----------------

- ZON-2390: Remove link from nonlinked images

- ZON-2385: Fix Jobbox Dropdown

- HOTFIX: ZMO gallery buttons

- HOTFIX: Drop caption block from centerpage header image

- HOTFIX: Nextread image in ZMO


2.22 (2015-11-04)
-----------------

- ZON-2362: Set banner_channel for new ressort 'entdecken' to 'reisen'

- ZON-2365: Fix pre-moderation lightbox on mobile

- ZON-606: Add community states

- FIX: Deduplicate Automatic Gallery Areas

- FIX: Repair deduped pagination for gallery areas

- MAINT: Plug in jinja finalizer to hide `None` expressions

- MAINT: Replace deprecated Bitblt with new image handling

- MAINT: Deprecate d11n for good.

- MAINT: Sass: Replace underscores in variable names


2.21 (2015-10-30)
-----------------

- FIX: Handle ressorts with umlauts (during ad-nextread lookup)

- ZON-2154: Prevent users from recommending their own comments

- ZON-2324: Add Studiumbox

- ZON-2327: Implement Jobbox with Dropdown


2.20 (2015-10-30)
-----------------

- ZON-2328: Add premoderation for new users

- ZON-2285: Identify if view is wrapped via user agent

- ZON-2206: Handle empty subressort DAV property properly

- ZON-2321: Beef up reify to a multilayer caching descriptor

- MAINT: Fix bumpy chronological article navigation

- ZON-2051: Remove Grunticon from ZON and use SVG sprites

- FIX: Handle multiple child nodes in rawxml CP modules


2.19 (2015-10-28)
-----------------

- MAINT: Reorganize article footer to fix margins and harmonize border-color

- ZON-2168: Link-Object teaser should point to target URL
