@@ -9,6 +9,8 @@ Change log for zeit.web
 - HOTFIX: Render a redirect if we have a call to a dynamic folder with an empty
   view_name
 
+- BUG-321: Don't display article image blocks that do not point to an image
+
 
 2.24 (2015-11-09)
 -----------------
